nodeselector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssd-pod
spec:
  nodeSelector:
    disktype: ssd
  containers:
  - name: cicd-app
    image: kushal81/cicd-app:v9
    ports:
    - containerPort: 3000
