taint-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-toleration-pod
spec:
  containers:
  - name: cicd-app
    image: kushal81/cicd-app:v9
