service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-app-service
spec:
  selector:
    app: cicd-app-deploy
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30001
